# nikkei

./: .gitignore  config.yaml  enrich.py  main.py  pyproject.toml
src/: analyzer.py  data_loader.py  reporter.py  stock_fetcher.py
